@@ -1,3 +1,8 @@
+2014-06-01  Rene Liebscher <R.Liebscher@gmx.de>
+
+	bug #42337 avrdude.conf updates for UM232H/CM232H
+	* avrdude.conf.in: fixed entries as proposed
+
 2014-05-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	bug #41854: avrdude 6.1 does not compile on systems without libUSB
